--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+    <header>
+      <nav>
+        <ul class="home-bar">
+          <ls><a class="link" href="#home">Home</a></ls>
+          <ls><a class="link" href="#agenda">Agenda</a></ls>
+          <ls><a class="link" href="#speakers">Speakers</a></ls>
+          <ls><a class="link" href="#committee">Organising Committee</a></ls>
+          <ls><a class="link" href="#sponsors">Sponsors</a></ls>
+          <ls><a class="link" href="#contact">Contact Us</a></ls>
+        </ul>
+      </nav>
+
+
+    </header>
     <body id="page-top">
 
         <!-- Masthead-->
@@ -182,7 +196,7 @@
         </section>
 
         <!--Important Dates-->
-        <section class="page-section">
+        <section class="page-section" id="important-dates">
             <div class="container text-center">
               <h2 class="text-center mt-0 mb-2">Important Dates</h2>
               <p class="text-center text-small text-muted">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. </p>
@@ -266,7 +280,7 @@
         </section>
 
         <!--Sponsors-->
-        <section class="page-section">
+        <section class="page-section" id="sponsors">
             <div class="container text-center">
               <h2 class="text-center mt-0 mb-2">Sponsors</h2>
               <p class="text-center text-small text-muted">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
@@ -292,28 +306,45 @@
         </section>
 
         <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
-                        <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+91 99999 88888</div>
-                    </div>
-                    <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@sjce.ac.in">contact@sjce.ac.in</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+          <section class="page-section" id="contact">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-lg-8 text-center">
+                          <h2 class="mt-0">Let's Get In Touch!</h2>
+                          <hr class="divider my-4" />
+                          <p class="text-muted mb-5">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+                          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                          <div>+91 99999 88888</div>
+                      </div>
+                      <div class="col-lg-3 mr-auto text-center">
+                          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                          <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                          <a class="d-block" href="mailto:contact@sjce.ac.in">contact@sjce.ac.in</a>
+                      </div>
+                      <div class="col-lg-3 mr-auto text-center">
+                          <i class="fab fa-instagram fa-3x mb-3 text-muted"></i>
+                          <a class="d-block" href="www.instagram.com/ieee_sjce">IEEE SJCE</a>
+                      </div>
+                      <div class="col-lg-3 mr-auto text-center">
+                          <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
+                          <a class="d-block" href="https://www.linkedin.com/company/ieee-sjce">IEEE SJCE</a>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+          <!-- Footer -->
+          <footer>
+            <div class= "copyright-box"></div>
+              <div class="copyright-claim text-left"> © IEEE SJCE, All Right Reserved </div>
+              <div class="develop-by text-right"><p>Developed By</p> </div>
+              <div class="dsclogo size-20px"><img class="logo"src="img/dsc-logo.png"></div>
+          </footer>
+
 
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
