--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <header>
+
+      <!--This might help!
+      https://getbootstrap.com/docs/4.0/components/navbar/-->
       <nav>
         <ul class="home-bar">
           <ls><a class="link" href="#home">Home</a></ls>
@@ -31,7 +34,7 @@
     <body id="page-top">
 
         <!-- Masthead-->
-        <header class="masthead">
+        <section class="masthead">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
@@ -45,7 +48,7 @@
                 </div>
             </div>
 
-        </header>
+        </section>
 
         <!-- Timer-->
         <section class="page-section" id="timer" style="background-color:#dddddd;">
@@ -327,7 +330,7 @@
                       </div>
                       <div class="col-lg-3 mr-auto text-center">
                           <i class="fab fa-instagram fa-3x mb-3 text-muted"></i>
-                          <a class="d-block" href="www.instagram.com/ieee_sjce">IEEE SJCE</a>
+                          <a class="d-block" href="https://www.instagram.com/ieee_sjce">IEEE SJCE</a>
                       </div>
                       <div class="col-lg-3 mr-auto text-center">
                           <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
@@ -339,11 +342,18 @@
 
           <!-- Footer -->
           <footer>
-            <div class= "copyright-box"></div>
-              <div class="copyright-claim text-left"> © IEEE SJCE, All Right Reserved </div>
-              <div class="develop-by text-right"><p>Developed By</p> </div>
-              <div class="dsclogo size-20px"><img class="logo"src="img/dsc-logo.png"></div>
-          </footer>
+            <div class="container">
+              <div class="row py-3 px-3">
+                <div class= "copyright-box"></div>
+                  <div class="copyright-claim text-md-left text-center col-md-6 my-auto"> © IEEE SJCE, All Right Reserved </div>
+                  <div class="col-md-6">
+                    <div class="develop-by text-md-left text-center mt-2"><p>Developed By</p></div>
+                    <div class="dsclogo"><img class="logo" src="img/dsc-logo.png"></div>
+                  </div>
+                </div>
+              </div>
+            </footer>
+
 
 
         <!--Bootstrap-->
