--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
     </head>
     <header>
 
-      <!--This might help!
-      https://getbootstrap.com/docs/4.0/components/navbar/-->
-      <div class="logo-container"><img class="ieee-logo"src="img/logo.png" alt="IEEE-SJCE"></div>
-
-      <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#agenda">Agenda</a>
-        <a href="#speakers">Speakers</a>
-        <a href="#committee">Organising Committee</a>
-        <a href="#sponsors">Sponsors</a>
-        <a href="#contact">Contact Us</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-        </a>
+      <div class="container-fluid">
+        <div class="topnav" id="myTopnav">
+          <div class="logo-container"><img class="ieee-logo"src="img/logo.png" alt="IEEE-SJCE"></div>
+          <a href="#home" class="active">Home</a>
+          <a href="#agenda">Agenda</a>
+          <a href="#speakers">Speakers</a>
+          <a href="#committee">Organising Committee</a>
+          <a href="#sponsors">Sponsors</a>
+          <a href="#contact">Contact Us</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+          </a>
+        </div>
       </div>
 
 
@@ -150,7 +149,7 @@
               </div>
               <hr class="divider-light my-4" />
             <div class="row speakers my-5 d-flex justify-content-center">
-              <div class="card col-md-3 mx-3 my-3">
+              <div class="card col-md-5 col-lg-3 mx-3 my-3">
                 <img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-center">Speaker Name</h5>
@@ -162,7 +161,7 @@
                  </p>
                 </div>
               </div>
-              <div class="card col-md-3 mx-3 my-3">
+              <div class="card col-md-5 col-lg-3 mx-3 my-3">
                 <img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-center">Speaker Name</h5>
@@ -174,7 +173,7 @@
                  </p>
                 </div>
               </div>
-              <div class="card col-md-3 mx-3 my-3">
+              <div class="card col-md-5 col-lg-3 mx-3 my-3">
                 <img class="card-img-top mt-2 m-0" src="img/3.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-center">Speaker Name</h5>
@@ -187,7 +186,7 @@
                 </div>
               </div>
 
-              <div class="card col-md-3 mx-3 my-3">
+              <div class="card col-md-5 col-lg-3 mx-3 my-3">
                 <img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-center">Speaker Name</h5>
@@ -199,7 +198,7 @@
                  </p>
                 </div>
               </div>
-              <div class="card col-md-3 mx-3 my-3">
+              <div class="card col-md-5 col-lg-3 mx-3 my-3">
                 <img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-center">Speaker Name</h5>
@@ -211,7 +210,7 @@
                  </p>
                 </div>
               </div>
-              <div class="card col-md-3 mx-3 my-3">
+              <div class="card col-md-5 col-lg-3 mx-3 my-3">
                 <img class="card-img-top mt-2 mt-2" src="img/3.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-center">Speaker Name</h5>
@@ -238,7 +237,7 @@
                 </div>
               </div>
               <hr class="divider my-4" />
-              <div class="row d-flex justify-content-center">
+              <div class="row d-flex justify-content-center mx-2">
                 <table class="table table-striped col-md-8">
                   <thead>
                     <tr>
@@ -280,7 +279,7 @@
               </div>
               <hr class="divider-light my-4" />
               <div class="row speakers my-5 d-flex justify-content-center">
-                <div class="card col-md-3 mx-3 my-3">
+                <div class="card col-md-5 col-lg-3 mx-3 my-3">
                   <img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title text-center">Name</h5>
@@ -292,7 +291,7 @@
                    </p>
                   </div>
                 </div>
-                <div class="card col-md-3 mx-3 my-3">
+                <div class="card col-md-5 col-lg-3 mx-3 my-3">
                   <img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title text-center">Name</h5>
@@ -304,7 +303,7 @@
                    </p>
                   </div>
                 </div>
-                <div class="card col-md-3 mx-3 my-3">
+                <div class="card col-md-5 col-lg-3 mx-3 my-3">
                   <img class="card-img-top mt-2 m-0" src="img/3.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title text-center">Name</h5>
@@ -366,20 +365,20 @@
                       </div>
                   </div>
                   <div class="row">
-                      <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+                      <div class="col-lg-3 col-md-6 ml-auto text-center mb-5 mb-lg-0">
                           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
                           <div>+91 99999 88888</div>
                       </div>
-                      <div class="col-lg-3 mr-auto text-center">
+                      <div class="col-lg-3 col-md-6 mr-auto text-center mb-5 mb-lg-0">
                           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                           <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                           <a class="d-block" href="mailto:contact@sjce.ac.in">contact@sjce.ac.in</a>
                       </div>
-                      <div class="col-lg-3 mr-auto text-center">
+                      <div class="col-lg-3 col-md-6 mr-auto text-center mb-5 mb-lg-0">
                           <i class="fab fa-instagram fa-3x mb-3 text-muted"></i>
                           <a class="d-block" href="https://www.instagram.com/ieee_sjce">IEEE SJCE</a>
                       </div>
-                      <div class="col-lg-3 mr-auto text-center">
+                      <div class="col-lg-3 col-md-6 mr-auto text-center">
                           <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
                           <a class="d-block" href="https://www.linkedin.com/company/ieee-sjce">IEEE SJCE</a>
                       </div>
@@ -389,8 +388,8 @@
 
           <!-- Footer -->
           <footer>
-            <div class="container">
-              <div class="row py-3 px-3">
+            <div class="container py-2">
+              <div class="row py-3 px-3 d-flex justify-content-center">
                   <div class="col-md-6">
                     <div class="develop-by text-md-left text-center mt-2"><p>Developed By</p></div>
                     <div class="dsclogo"><img class="logo" src="img/dsc-logo.png"></div>
