index.html - Committees Content and style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <title>ICMAN 2021</title>
+  <title>ICEC3T 2021</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -42,7 +42,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase font-weight-bold">ICMAN 2021</h1>
+          <h1 class="text-uppercase font-weight-bold">ICEC3T 2021</h1>
           <hr class="divider-light my-4" />
         </div>
         <div class="col-lg-8 align-self-baseline">
@@ -174,6 +174,9 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -236,8 +239,81 @@
                 <p>Dr.Jayakumar Venkatesan, Valles Marineris, Chennai</p>
                 <p>Dr. T Shreekanth, L&T Technologies, Mysuru</p>
                 <p>Prof. Nataraj C R Chairman IETE, Former Prof. SJCE, Mysuru</p>
-
-
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card mx-3 my-3 d-block w-100 px-5">
+              <div class="card-body mx-3">
+                <p class="font-weight-bold">Finance Committee:</p>
+                <p>Dr. S Gayathri, Associate Professor, JSSSTU, Mysuru (Chair)</p>
+                <p>Prof. Shivaprasad N, Assistant Professor, JSSSTU, Mysuru (Co-chair 1)</p>
+                <p>Prof. Yashwanth S D, Assistant Professor, JSSSTU, Mysuru</p>
+                <p class="font-weight-bold">Organizing Chair:</p>
+                <p>Dr. N M Renukappa, Professor, JSSSTU, Mysuru (Chair)</p>
+                <p>Dr. S. B Rudraswamy, IEEE Assistant Professor, JSSSTU, Mysuru (Co-Chair)</p>
+                <p class="font-weight-bold">Publication Committee:</p>
+                <p>Dr. S.K.Niranjan, Professor, JSSSTU Mysuru (Chair)</p>
+                <p>S G Raghavendra Prasad, EXECOM Member, IEEE Bangalore Section (Co-chair)</p>
+                <p>Prof. Shashidhar R, IEEE, Assistant Professor, JSSSTU, Mysuru (Co-chair)</p>
+                <p>Prof. Anitha S Prasad, Assistant Professor, JSSSTU, Mysuru</p>
+                <p class="font-weight-bold">Local Organizing Committee:</p>
+                <p>Prof. SujathaKumari B A, IEEE, Associate Professor, JSSSTU, Mysuru (Chair)</p>
+                <p>Prof. A Thyagaraja Murthy, IEEE, Associate Professor, JSSSTU, Mysuru (Co-Chair)</p>
+                <p>Prof. Supreetha M, IEEE, Assistant Professor, JSSSTU, Mysuru</p>
+                <p>Prof. Kavyashree M K, Assistant Professor, JSSSTU, Mysuru</p>
+                <p>Prof. Halesh M R, Assistant Professor, JSSSTU, Mysuru</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card mx-3 my-3 d-block w-100 px-5">
+              <div class="card-body mx-3">
+                <p class="font-weight-bold">Promotion Committee:</p>
+                <p>Prof. Supreetha M</p>
+                <p>Prof. Kavyashree M K</p>
+                <p class="font-weight-bold">Food Committee:</p>
+                <p>Prof. A Thyagaraja Murthy</p>
+                <p>Prof. Halesh M R</p>
+                <p class="font-weight-bold">Hospitality for Guests/Speakers Committee:</p>
+                <p>Prof. Puneeth K M</p>
+                <p>Prof. Chandrashekar B N</p>
+                <p class="font-weight-bold">Hospitality for Participants Committee:</p>
+                <p>Prof. Madhusudhan M. P</p>
+                <p>Prof. Praveen Kumar M S</p>
+                <p class="font-weight-bold">Registration Committee:</p>
+                <p>Prof. B S Renuka</p>
+                <p>Smt. K.S. Jayashree</p>
+                <p>Prof. Eshwari A Madappa </p>
+                <p>Prof. Megha K M</p>
+                <p>Poornima</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card mx-3 my-3 d-block w-100 px-5">
+              <div class="card-body mx-3">
+                <h5><p class="font-weight-bold">Technical Committee:</p></h5>
+                <p class="font-weight-bold">Electronics</p>
+                <p>Dr. M G Veena</p>
+                <p>Dr. S B Rudraswamy</p>
+                <p>Prof. H M Gayathri</p>
+                <p>Prof. Anupama S</p>
+                <p class="font-weight-bold">Communication</p>
+                <p>Dr. M N Jayaram</p>
+                <p>Dr. N Shankaraiah</p>
+                <p>Prof. Megha</p>
+                <p>Prof. A M Eshwari</p>
+                <p class="font-weight-bold">Control Systems</p>
+                <p>Dr. Sudarshan P Kulkarni</p>
+                <p>Dr. U B Mahadevaswamy</p>
+                <p>Prof D R Pavithra</p>
+                <p>Prof. Ramya MV</p>
+                <p class="font-weight-bold">Computing Technologies</p>
+                <p>Dr. Sudarshan P Kulkarni</p>
+                <p>Prof. Sujathakumari B A</p>
+                <p>Prof. Vinayprasad M S</p>
+                <p>Prof. Kavyashree K M</p>
               </div>
             </div>
           </div>
