--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
           <hr class="divider-light my-4" />
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit nisl, pretium sit amet feugiat ut, posuere at dui. Mauris tristique tortor in congue pulvinar. Donec in faucibus odio.</p>
+          <p class="mb-5 font-weight-bold" style="color:black">IEEE International Conference on Electronics,
+            Communication, Control systems and Computing Technologies –2021
+          </p>
           <a class="btn btn-default" href="#agenda"><span class="px-3  text-white">Find Out More</span></a>
         </div>
       </div>
@@ -59,12 +61,22 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0 text-small">A Short Intro</h2>
-          <p class="text-center text-small text-muted">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
+          <h2 class="mt-0 text-small">About</h2>
           <hr class="divider my-4" />
-          <p>Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. Donec tempor, arcu at egestas sollicitudin, lorem
-            purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam.
-            Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
+          <i>
+            <p>JSS MAHAVIDYAPEETHA
+              <br /> JSS SCIENCE AND TECHNOLOGY UNIVERSITY
+              <br /> SRI JAYACHAMARAJENDRA COLLEGE OF ENGINEERING, MYSURU
+            </p>
+          </i>
+
+          <p> <b>DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING</b><br />
+            is organizing two days</p>
+
+          <p>IEEE International Conference on Electronics,
+            Communication, Control systems and Computing Technologies –2021
+
+          </p>
         </div>
       </div>
     </div>
@@ -76,7 +88,6 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0 text-small">We'll see you on 18th December 2021.</h2>
-          <p class="text-center text-small text-grey">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
           <hr class="divider-light my-4" />
           <div class="col-md-12 text-center rounded shadow p-3">
             <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center"></div>
@@ -293,7 +304,9 @@
           <div class="carousel-item">
             <div class="card mx-3 my-3 d-block w-100 px-5">
               <div class="card-body mx-3">
-                <h5><p class="font-weight-bold">Technical Committee:</p></h5>
+                <h5>
+                  <p class="font-weight-bold">Technical Committee:</p>
+                </h5>
                 <p class="font-weight-bold">Electronics</p>
                 <p>Dr. M G Veena</p>
                 <p>Dr. S B Rudraswamy</p>
@@ -337,7 +350,6 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0 mb-2">Important Dates</h2>
-          <p class="text-small text-muted">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. </p>
         </div>
       </div>
       <hr class="divider my-4" />
@@ -450,11 +462,10 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mb-4 text-white">Location</h2>
-          <h6 class="text-grey">Vivamus vel arcu ut augue commodo euismod a sed mauris. </h6>
         </div>
       </div>
       <hr class="divider-light my-4" />
-      <p class="text-small text-white">Maecenas a mauris elementum, placerat elit iaculis, egestas enim. <br>Suspendisse id facilisis neque. </p>
+      <h5 class="text-small text-white ">JSS TI Campus,<br> Mysuru, Karnataka 570006 </h5>
     </div>
   </section>
 
@@ -465,7 +476,6 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4" />
-          <p class="text-muted mb-5">Donec tempor, arcu at egestas sollicitudin, lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
         </div>
       </div>
       <div class="row">
