call for papers, registration, minor changes

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 </head>
 <header>
 
-  <div class="container-fluid">
+  <div class="container-fluid header">
     <div class="topnav" id="myTopnav">
       <div class="logo-container"><img class="ieee-logo" src="img/logo.png" alt="IEEE-SJCE"></div>
       <a href="#home" class="active">Home</a>
-      <a href="#agenda">Agenda</a>
-      <a href="#committee">Committee</a>
+      <a href="./registration.html">Registration</a>
+      <a href="#impdates">Important Dates</a>
+      <a href="./callforpapers.html">Call For Papers</a>
+      <a href="#committee">Organising Committee</a>
+      <a href="#speakers">Speakers</a>
+      <a href="./download.html">Downloads</a>
       <a href="#contact">Contact Us</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -162,7 +166,7 @@
     <div class="container py-5">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0 mb-2">COMMITTEE</h2>
+          <h2 class="text-white mt-0 mb-2">ORGANISING COMMITTEE</h2>
         </div>
       </div>
       <hr class="divider-light my-4" />
@@ -345,7 +349,7 @@
   </section>
 
   <!--Important Dates-->
-  <section class="page-section" id="important-dates">
+  <section class="page-section" id="impdates">
     <div class="container text-center">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
@@ -384,56 +388,54 @@
     </div>
   </section>
 
-  <!--Organising Committee
-        <section class="page-section" id="committee">
-            <div class="container text-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                  <h2 class="text-white mt-0 mb-2">Organising Committee</h2>
-                  <p class="text-small text-grey">Lorem purus luctus dui, id accumsan leo eros nec diam. Proin et erat elit. Nunc quis metus erat. Vestibulum semper dolor in congue pharetra. </p>
-                </div>
-              </div>
-              <hr class="divider-light my-4" />
-              <div class="row speakers my-5 d-flex justify-content-center">
-                <div class="card col-md-5 col-lg-3 mx-3 my-3">
-                  <img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title text-center">Name</h5>
-                    <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
-                    <p class="text-center speaker-social-media">
-                      <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
-                      <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
-                      <a href="#"><i class="fas fa-globe fa-2x mx-2"></i></a>
-                   </p>
-                  </div>
-                </div>
-                <div class="card col-md-5 col-lg-3 mx-3 my-3">
-                  <img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title text-center">Name</h5>
-                    <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
-                    <p class="text-center speaker-social-media">
-                      <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
-                      <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
-                      <a href="#"><i class="fas fa-globe fa-2x mx-2"></i></a>
-                   </p>
-                  </div>
-                </div>
-                <div class="card col-md-5 col-lg-3 mx-3 my-3">
-                  <img class="card-img-top mt-2 m-0" src="img/3.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title text-center">Name</h5>
-                    <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
-                    <p class="text-center speaker-social-media">
-                      <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
-                      <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
-                      <a href="#"><i class="fas fa-globe fa-2x mx-2"></i></a>
-                   </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </section>-->
+  <section class="page-section" id="speakers">
+    <div class="container text-center">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <h2 class="text-white mt-0 mb-2">Speakers</h2>
+        </div>
+      </div>
+      <hr class="divider-light my-4" />
+      <div class="row speakers my-5 d-flex justify-content-center">
+        <div class="card col-md-5 col-lg-3 mx-3 my-3">
+          <img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Name</h5>
+            <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
+            <p class="text-center speaker-social-media">
+              <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
+              <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
+              <a href="#"><i class="fas fa-globe fa-2x mx-2"></i></a>
+            </p>
+          </div>
+        </div>
+        <div class="card col-md-5 col-lg-3 mx-3 my-3">
+          <img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Name</h5>
+            <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
+            <p class="text-center speaker-social-media">
+              <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
+              <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
+              <a href="#"><i class="fas fa-globe fa-2x mx-2"></i></a>
+            </p>
+          </div>
+        </div>
+        <div class="card col-md-5 col-lg-3 mx-3 my-3">
+          <img class="card-img-top mt-2 m-0" src="img/3.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Name</h5>
+            <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
+            <p class="text-center speaker-social-media">
+              <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
+              <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
+              <a href="#"><i class="fas fa-globe fa-2x mx-2"></i></a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!--Sponsors
         <section class="page-section" id="sponsors">
