--- a/conference.html
+++ b/conference.html
@@ -43,11 +43,12 @@
 <body id="page-top">
   <div class="container py-5">
 
-    <h1 class="text-center text-primary"><br /> Call For Papers</h1><br />
-    <!--Topics-->
-    <h3 class="text-center text-secondary">LIST OF TOPICS</h3>
-    <br />
-    <br />
+    <h1 class="text-center text-primary"> <br />About The Conference</h1><br />
+    <p>First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 18- 19, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
+      is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia and
+      industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
+      electronics, communication, control systems and computing technology.</p>
+
     <div class="row">
       <div class="col-lg-4">
         <h4>Electronics Engineering</h4>
@@ -155,39 +156,8 @@
 
       </div>
     </div>
-    <br />
-    <hr />
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h4>Best Papers Awards</h4>
-        <p>Best Paper Award (Academia)<br />
-          Best Paper Award (Industry)<br />
-          Each Track Best Paper Award(Academia)<br />
-          Each Track Best Paper Award(Industry)</p>
-      </div>
-    </div>
-    <hr />
 
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h4>Submission Guidelines</h4>
-        <p>All papers must be submitted in PDF via EasyChair.<br />
-          Authors required to create an EasyChair account before uploading the paper (if the submitting author does not have an EasyChair account).</p>
-        <p>
-          All papers must be submitted in A4 size IEEE standard template as given in the link:
-          <a href="https://www.ieee.org/conferences/publishing/templates.html">https://www.ieee.org/conferences/publishing/templates.html</a>
-        </p>
-        <p>Please click following 'SUBMIT PAPER' button to submit your paper</p>
-        <p><a href="https://easychair.org/account/signin?l=zfYhADnZY8sC5NMWezvmTs#" class="btn btn-primary">Submit Paper</a></p>
-
-        <p class="font-weight-bold">NOTE</p>
-        <ol>
-          <li>Page Limit - Maximum 6 pages - Additional pages with an extra page charge of Rs.1500 per page (Maximum 7 pages)</li>
-
-          <li>Submit papers in PDF format only</li>
-        </ol>
-      </div>
-    </div>
+  </div>
 
 
 
