--- a/sjce.html
+++ b/sjce.html
@@ -41,10 +41,21 @@
 </header>
 
 <body id="page-top">
-  <div class="container py-5" style="min-height:80vh">
-    <br /><br /><br />
-    <h1 class="text-center text-primary"> Downloads</h1><br />
-    <h5 class="text-center text-secondary">Coming Soon!</h5>
+  <div class="container text-center py-5">
+
+    <h1 class="text-center text-primary"> <br />About SJCE</h1><br />
+    <p><img src="img/about/sjce.jpg" alt="sjce" style="height:250px" /></p>
+    <p>Sri Jayachamarajendra College Of Engineering, conceived in 1963, is the dream child of Jagadguru Dr. Sri Shivarathri Rajendra Mahaswamigalavaru, the 23rd pontiff of Sri Suttur Mutt. It comes under the aegis of JSS Mahavidyapeetha, which is the
+      primary institution of many such institutions. The college was officially inauguarated by the esteemed founder of Manipal Institutes, Dr. T.M.A.Pai, the then chairman of the academy of education, Manipal, Mysore State.</p>
+
+    <p>The Institution serves as one of the major landmarks of the western part of mysore, with its sprawling 117 acres of campus and several recognizable buildings. As one of the leading institutes in India, SJCE has been recognized under the
+      Technical Education Quality Improvement Programme(TEQIP), which is a world bank associated scheme and has been granted a generous and sumptuous Rs.20 crores.</p>
+    <p>Acknowledging the state of the art infrastructural facilities, faculties and expertise, that have been the hallmarks of the college, the Visvesvaraya Technological University has conferred the “Autonomous status” to the college from the year
+      2007-08.</p>
+  </div>
+
+  </div>
+
 
 
   </div>
@@ -64,7 +75,6 @@
 
 
   <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn btn-primary">&nbsp;&nbsp;˄&nbsp;&nbsp;</button>
-
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
