--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 
   <div class="container-fluid header">
     <div class="topnav" id="myTopnav">
-      <div class="logo-container"><img class="ieee-logo" src="img/logo.png" alt="IEEE-SJCE"></div>
+      <div class="logo-container">
+        <img class="ieee-logo" src="img/jssmvp-logo.png" alt="JSS">
+        <img class="ieee-logo" src="img/jss-logo.jpg" alt="SJCE">
+        <img class="ieee-logo" src="img/logo.png" alt="IEEE-SJCE">
+      </div>
       <a href="#home" class="active">Home</a>
+      <a href="#overview">About</a>
       <a href="./registration.html">Registration</a>
       <a href="#impdates">Important Dates</a>
       <a href="./callforpapers.html">Call For Papers</a>
@@ -65,8 +70,6 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0 text-small">About</h2>
-          <hr class="divider my-4" />
           <i>
             <p>JSS MAHAVIDYAPEETHA
               <br /> JSS SCIENCE AND TECHNOLOGY UNIVERSITY
@@ -102,62 +105,44 @@
   </section>
 
   <!-- Agenda-->
-  <section class="page-section" id="agenda">
+  <section class="page-section">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0 mb-2">Agenda</h2>
-          <p class="text-small text-muted"> Full agenda available <a href="#">here</a></p>
+          <h2 class="mt-0 mb-2">Overview</h2>
         </div>
       </div>
       <hr class="divider my-4" />
-      <div class="row">
-        <div class="col-3 links-nav">
-          <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            <a class="nav-link active py-3" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Dec 18</a>
-            <a class="nav-link py-3" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Dec 19</a>
-          </div>
-        </div>
-        <div class="col-9">
-          <div class="tab-content" id="v-pills-tabContent">
-            <div class="tab-pane fade show active px-3" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-              <img src="img/agenda1.jpg" class="img-fluid float-left">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam purus odio, posuere posuere fermentum ut, dignissim sit amet mi. Suspendisse vitae varius enim. Suspendisse eget nibh mauris. Mauris rhoncus non mi a pulvinar.
-                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris dui eros, molestie ut convallis id, laoreet at metus. Donec vehicula sem vel tellus sodales, a tristique velit viverra.</p>
-              <p class="text-right text-muted text-uppercase font-change"><i class="fas fa-clock"></i><span class="mr-5 ml-2">Time</span>
-                <i class="fas fa-map"></i><span class="mr-5 ml-2">Place</span>
-                <i class="fas fa-user"></i><span class="mr-5 ml-2">Speaker</span>
-              </p><br>
-
-              <img src="img/agenda2.jpg" class="img-fluid float-left">
-              <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam purus odio, posuere posuere fermentum ut, dignissim sit amet mi. Suspendisse vitae varius enim. Suspendisse eget nibh mauris. Mauris rhoncus non mi a
-                pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris dui eros, molestie ut convallis id, laoreet at metus. Donec vehicula sem vel tellus sodales, a tristique velit viverra.</p>
-              <p class="text-right text-muted text-uppercase font-change"><i class="fas fa-clock"></i><span class="mr-5 ml-2">Time</span>
-                <i class="fas fa-map"></i><span class="mr-5 ml-2">Place</span>
-                <i class="fas fa-user"></i><span class="mr-5 ml-2">Speaker</span>
-              </p><br>
-
-            </div>
-            <div class="tab-pane fade px-3" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-              <img src="img/agenda2.jpg" class="img-fluid float-left">
-              <p>Morbi venenatis consequat enim in finibus. Mauris malesuada justo id lobortis pulvinar. Aenean molestie metus quis lectus lacinia cursus. Nullam porttitor ligula ut consequat commodo. Nunc porta dui sit amet odio volutpat consequat.
-                In venenatis elit eget metus cursus venenatis.</p>
-              <p class="text-right text-muted text-uppercase font-change"><i class="fas fa-clock"></i><span class="mr-5 ml-2">Time</span>
-                <i class="fas fa-map"></i><span class="mr-5 ml-2">Place</span>
-                <i class="fas fa-user"></i><span class="mr-5 ml-2">Speaker</span>
-              </p><br>
-
-              <img src="img/agenda1.jpg" class="img-fluid float-left">
-              <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam purus odio, posuere posuere fermentum ut, dignissim sit amet mi. Suspendisse vitae varius enim. Suspendisse eget nibh mauris. Mauris rhoncus non mi a
-                pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris dui eros, molestie ut convallis id, laoreet at metus. Donec vehicula sem vel tellus sodales, a tristique velit viverra.</p>
-              <p class="text-right text-muted text-uppercase font-change"><i class="fas fa-clock"></i><span class="mr-5 ml-2">Time</span>
-                <i class="fas fa-map"></i><span class="mr-5 ml-2">Place</span>
-                <i class="fas fa-user"></i><span class="mr-5 ml-2">Speaker</span>
-              </p><br>
-            </div>
-          </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-12 py-3" id="overview">
+          First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 18- 19, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
+          is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia and
+          industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
+          electronics, communication, control systems and computing technology.<br /><br />
         </div>
       </div>
+      <hr />
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <h2 class="mt-0 mb-2">About</h2>
+        </div>
+      </div>
+      <hr class="divider my-4" />
+      <div class=" row about-buttons">
+        <div class="col-md-3 p-2">
+          <center><a href="conference.html" class="btn btn-lg btn-primary p-2 about">About the Conference</a></center>
+        </div>
+        <div class="col-md-3 p-2">
+          <center><a href="jssstu.html" class="btn btn-lg btn-secondary p-2 about">About JSSSTU</a></center>
+        </div>
+        <div class="col-md-3 p-2">
+          <center><a href="sjce.html" class="btn btn-lg btn-primary p-2 about">About SJCE</a></center>
+        </div>
+        <div class="col-md-3 p-2">
+          <center><a href="mysore.html" class="btn btn-lg btn-secondary p-2 about">About Mysore</a></center>
+        </div>
+      </div>
+
     </div>
   </section>
 
@@ -284,30 +269,6 @@
           <div class="carousel-item">
             <div class="card mx-3 my-3 d-block w-100 px-5">
               <div class="card-body mx-3">
-                <p class="font-weight-bold">Promotion Committee:</p>
-                <p>Prof. Supreetha M</p>
-                <p>Prof. Kavyashree M K</p>
-                <p class="font-weight-bold">Food Committee:</p>
-                <p>Prof. A Thyagaraja Murthy</p>
-                <p>Prof. Halesh M R</p>
-                <p class="font-weight-bold">Hospitality for Guests/Speakers Committee:</p>
-                <p>Prof. Puneeth K M</p>
-                <p>Prof. Chandrashekar B N</p>
-                <p class="font-weight-bold">Hospitality for Participants Committee:</p>
-                <p>Prof. Madhusudhan M. P</p>
-                <p>Prof. Praveen Kumar M S</p>
-                <p class="font-weight-bold">Registration Committee:</p>
-                <p>Prof. B S Renuka</p>
-                <p>Smt. K.S. Jayashree</p>
-                <p>Prof. Eshwari A Madappa </p>
-                <p>Prof. Megha K M</p>
-                <p>Poornima</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card mx-3 my-3 d-block w-100 px-5">
-              <div class="card-body mx-3">
                 <h5>
                   <p class="font-weight-bold">Technical Committee:</p>
                 </h5>
@@ -358,29 +319,41 @@
       </div>
       <hr class="divider my-4" />
       <div class="row d-flex justify-content-center mx-2">
-        <table class="table table-striped col-md-8">
+        <table class="table table-striped table-responsive col-md-8">
           <thead>
             <tr>
               <th scope="col">#</th>
               <th scope="col">Event</th>
-              <th scope="col">Date</th>
+              <th scope="col">Submission Start Date</th>
+              <th scope="col">Submission End Date</th>
+              <th scope="col">Acceptance Notification</th>
+              <th scope="col">Last Date For Registration</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <th scope="row">1</th>
-              <td>Event 1</td>
-              <td>Date 1</td>
+              <td>Early Submission</td>
+              <td>1st May 21</td>
+              <td>31st May 21</td>
+              <td>19th June 21</td>
+              <td>30th June 21</td>
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td>Event 2</td>
-              <td>Date 2</td>
+              <td>Regular Submission</td>
+              <td>1st June 21</td>
+              <td>31st August 21</td>
+              <td>30th September 21</td>
+              <td>11th October 21</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>Event 3</td>
-              <td>Date 3</td>
+              <td>Late Submission</td>
+              <td>1st September 21</td>
+              <td>30th September 21</td>
+              <td>21st October 21</td>
+              <td>10th November 21</td>
             </tr>
           </tbody>
         </table>
@@ -517,7 +490,7 @@
   </footer>
 
 
-
+  <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn btn-primary"><span class="font-weight-bold">&nbsp;&nbsp;˄&nbsp;&nbsp;</span></button>
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
