--- a/jssstu.html
+++ b/jssstu.html
@@ -41,10 +41,22 @@
 </header>
 
 <body id="page-top">
-  <div class="container py-5" style="min-height:80vh">
-    <br /><br /><br />
-    <h1 class="text-center text-primary"> Downloads</h1><br />
-    <h5 class="text-center text-secondary">Coming Soon!</h5>
+  <div class="container text-center py-5">
+
+    <h1 class="text-center text-primary"> <br />About JSSSTU</h1><br />
+    <p>JSS Science and Technology University is one of the recent additions to the institutions administered by JSS Mahavidyapeetha, and is the second University being established besides a Medical University at Mysuru. India’s higher education
+      system is on the verge of major reforms and JSS Science and Technology University has been established envisioning to create a bright future and a desired learner centric eco-system and transform into a futuristic global University. The
+      Availability of skilled human resources and trained technical manpower in engineering and technology is a major reason for growing investments in the state. In this context higher education system has a key role and more particularly JSS S&T U
+      with an objective of transforming the students at all levels of higher education including research and innovation with measures to improve quality of workforce.</p>
+    <p><img src="img/about/jssstu.jpg" alt="jssstu" style="height:20vh" /></p>
+    <p>Education has always been India’s prime priority. Mysuru is the holy land for educational institutions. Education is the basic necessity for wellbeing and development of a Nation. A well-established higher education system forms the flagship
+      for transforming to meet the global needs. Yet, a large chunk of people in India need literacy and many more need to acquire employable skills to suit the emerging modern India.</p>
+
+    <p>Hence JSS S&T University is committed to deliver high quality educational opportunities for youth and transform not only its neighborhood but offer courses to equip aspiring youth to meet the global needs of industry in every sector.</p>
+  </div>
+
+  </div>
+
 
 
   </div>
@@ -64,7 +76,6 @@
 
 
   <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn btn-primary">&nbsp;&nbsp;˄&nbsp;&nbsp;</button>
-
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
