--- a/mysore.html
+++ b/mysore.html
@@ -41,10 +41,20 @@
 </header>
 
 <body id="page-top">
-  <div class="container py-5" style="min-height:80vh">
-    <br /><br /><br />
-    <h1 class="text-center text-primary"> Downloads</h1><br />
-    <h5 class="text-center text-secondary">Coming Soon!</h5>
+  <div class="container text-center py-5">
+
+    <h1 class="text-center text-primary"> <br />About Mysore</h1><br />
+    <p>Mysore, previously known as Mysuru, is the third largest and second most populated city of Karnataka. Situated right at the foot of Chamundi Hills, Mysore was once the capital of the Kingdom of Mysore. The rich cultural environment of Mysore
+      has earned it the moniker of Cultural Capital of Karnataka.</p>
+    <p><img src="img/about/mysore1.jpg" alt="mysore 1" style="height:250px" /></p>
+    <p>Mysore Dasara is celebrated with great pomp and grandeur for ten days and people from every corner of the globe visit this city during the festival. There are some notable heritage structures in Mysore like the famous Mysore Palace and the
+      Jaganmohana Palace. Other significant tourist spots in Mysore include Somanthapura, Karanji Lake & Park, Chamundi Hill, Brindavan Garden and Rail Museum.</p>
+    <p><img src="img/about/mysore2.jpg" alt="mysore 2" style="height:250px" /></p>
+    <p>Mysore is also famed for its exceptional quality of Mysore Silk and a unique tradition of painting known as Mysore Painting. This city offers quite a few mouthwatering delicacies like the Mysore Pak and Mysore Masala Dosa. </p>
+  </div>
+
+  </div>
+
 
 
   </div>
@@ -64,7 +74,6 @@
 
 
   <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn btn-primary">&nbsp;&nbsp;˄&nbsp;&nbsp;</button>
-
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
