--- a/registration.html
+++ b/registration.html
@@ -22,6 +22,7 @@
     <div class="topnav" id="myTopnav">
       <div class="logo-container"><img class="ieee-logo" src="img/logo.png" alt="IEEE-SJCE"></div>
       <a href="./index.html" class="active">Home</a>
+      <a href="./index.html#overview">About</a>
       <a href="./registration.html">Registration</a>
       <a href="./index.html#impdates">Important Dates</a>
       <a href="./callforpapers.html">Call For Papers</a>
@@ -49,141 +50,72 @@
     <div>
       <div class="table-responsive">
         <table class="table table-striped" width="100%">
+          <thead>
+            <tr>
+              <th scope="col">Category</th>
+              <th colspan="2" scope="col">Early Bird Registration</th>
+              <th colspan="2" scope="col">Regular Registration</th>
+              <th colspan="2" scope="col">Late Registration</th>
+            </tr>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Indian Author in INR</th>
+              <th scope="col">Foreign Author in USD</th>
+              <th scope="col">Indian Author in INR</th>
+              <th scope="col">Foreign Author in USD</th>
+              <th scope="col">Indian Author in INR</th>
+              <th scope="col">Foreign Author in USD</th>
+            </tr>
+          </thead>
           <tbody>
             <tr>
-              <td>
-                <strong>Authors Category</strong>
-              </td>
-              <td colspan="3">
-                <strong>Early Bird Submission &amp; Registration Fee (Rs) </strong><strong>&nbsp;(Discount on Regular Registration Fee) </strong>
-              </td>
-              <td>
-                <strong>Regular Registration Fee (Rs.) (Indian Author)</strong>
-              </td>
-              <td>
-                <strong>Regular Registration Fee (USD-$) (Foreign Author)</strong>
-              </td>
-              <td>
-                <strong>Non-Author Registration Fee (Rs.)</strong>
-              </td>
+              <th scope="row">IEEE Member</th>
+              <td>7080</td>
+              <td>160</td>
+              <td>8260</td>
+              <td>200</td>
+              <td>9676</td>
+              <td>220</td>
             </tr>
             <tr>
-              <td>
-                &nbsp;
-              </td>
-              <td>
-                15% Discount
-              </td>
-              <td>
-                10% Discount
-              </td>
-              <td>
-                5% Discount
-              </td>
-              <td>
-                &nbsp;
-              </td>
-              <td>
-                &nbsp;
-              </td>
-              <td>
-                &nbsp;
-              </td>
+              <th scope="row">Non-IEEE Member</th>
+              <td>8614</td>
+              <td>200</td>
+              <td>10030</td>
+              <td>240</td>
+              <td>12154</td>
+              <td>260</td>
             </tr>
             <tr>
-              <td>
-                <strong>IEEE Student Members</strong>
-              </td>
-              <td>
-                3,340
-              </td>
-              <td>
-                3,600
-              </td>
-              <td>
-                3,800
-              </td>
-              <td>
-                3,999
-              </td>
-              <td>
-                100
-              </td>
-              <td>
-                1000
-              </td>
+              <th scope="row">Complementary Author</th>
+              <td>4130</td>
+              <td>75</td>
+              <td>5074</td>
+              <td>100</td>
+              <td>6136</td>
+              <td>120</td>
             </tr>
             <tr>
-              <td>
-                <strong>Non-IEEE Student Members</strong>
-              </td>
-              <td>
-                4,250
-              </td>
-              <td>
-                4,500
-              </td>
-              <td>
-                4,750
-              </td>
-              <td>
-                4,999
-              </td>
-              <td>
-                120
-              </td>
-              <td>
-                2000
-              </td>
+              <th scope="row">Co-author/Listener/Attendee</th>
+              <td>3540</td>
+              <td>60</td>
+              <td>4130</td>
+              <td>75</td>
+              <td>4956</td>
+              <td>90</td>
             </tr>
             <tr>
-              <td>
-                <strong>IEEE Members</strong>
-              </td>
-              <td>
-                4,250
-              </td>
-              <td>
-                4,500
-              </td>
-              <td>
-                4,750
-              </td>
-              <td>
-                4,999
-              </td>
-              <td>
-                150
-              </td>
-              <td>
-                3000
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <strong>Non-IEEE Members</strong>
-              </td>
-              <td>
-                5,313
-              </td>
-              <td>
-                5,625
-              </td>
-              <td>
-                5,938
-              </td>
-              <td>
-                6,250
-              </td>
-              <td>
-                200
-              </td>
-              <td>
-                4000
-              </td>
+              <th scope="row">Extra Certificate</th>
+              <td>826</td>
+              <td>15</td>
+              <td>1062</td>
+              <td>25</td>
+              <td>1534</td>
+              <td>35</td>
             </tr>
           </tbody>
         </table>
+        <p>Above registration fee is including GST (18%)</p>
       </div>
     </div>
     <div class="font-weight-bold">
@@ -203,7 +135,7 @@
     <hr />
     <div>
       <br />
-      <table class="table table-striped">
+      <!--      <table class="table table-striped">
         <thead>
           <tr>
             <th colspan="2" style="text-align:center">NEFT Transaction Details</th>
@@ -235,7 +167,9 @@
             <td>XX</td>
           </tr>
         </tbody>
-      </table>
+      </table>-->
+      <h5>PAYMENT DETAILS</h5>
+      <a href="https://payu.in/" class="btn btn-primary">Pay Through PayU</a></p>
     </div>
     <div class="font-weight-bold">
       <p>Note : INTERNATIONAL TRANSACTIONS FOR REGISTRATION KINDLY USE THE SWIFT CODE : X</p>
@@ -261,6 +195,7 @@
   </footer>
 
 
+  <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn btn-primary">&nbsp;&nbsp;˄&nbsp;&nbsp;</button>
 
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
