--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <div class="col-lg-3 col-md-6 mr-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-          <a class="d-block" href="mailto:contact@sjce.ac.in">contact@sjce.ac.in</a>
+          <a class="d-block" href="mailto:icec3t@sjce.ac.in">icec3t@sjce.ac.in</a>
         </div>
         <div class="col-lg-3 col-md-6 mr-auto text-center mb-5 mb-lg-0">
           <i class="fab fa-instagram fa-3x mb-3 text-muted"></i>
